[package]
name = "fffh"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.9"
chrono = "0.4.19"
glob = "0.3.0"
tabular = "0.1.4"
